# MLOPS

./: Project.md  README.md  Readme.md  ml_model_deployment_best_practices.md  mlops_devops_project.md  prod.md  recommendation.md
Project/MDT-Dashboard/: .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  README_COMPLETE.md  README_ENHANCED.md  alembic.ini  cli.py  demo.py  demo_advanced_mlops.py  docker-compose.prod.yml  docker-compose.yml  generate_data.py  mlops_platform_report.json  pyproject.toml  pyproject_poetry.toml  requirements.txt  setup.py
Project/MDT-Dashboard/.github/workflows/: ci-cd.yml  enhanced-ci-cd.yml  ml-cicd.yml
Project/MDT-Dashboard/alembic/: env.py
Project/MDT-Dashboard/config/: .env.example  nginx.conf  prometheus.yml
Project/MDT-Dashboard/docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker
Project/MDT-Dashboard/k8s/: 00-namespace-config.yaml  01-postgres.yaml  02-redis.yaml  03-api.yaml
Project/MDT-Dashboard/scripts/: advanced_deploy.sh  create_cicd_pipeline.py  deploy.sh
Project/MDT-Dashboard/src/mdt_dashboard/: __init__.py  cli.py  data_processing.py  predict.py  predict_refactored.py  train.py  train_refactored.py  worker_new.py  worker_old.py  worker_refactored.py
Project/MDT-Dashboard/src/mdt_dashboard/api/: __init__.py  main.py  main_complete.py  main_enhanced.py  main_refactored.py
Project/MDT-Dashboard/src/mdt_dashboard/core/: __init__.py  advanced_config.py  config.py  config_new.py  config_old.py  database.py  models.py
Project/MDT-Dashboard/src/mdt_dashboard/dashboard/: complete_dashboard.py  main.py  main_refactored.py
Project/MDT-Dashboard/src/mdt_dashboard/drift_detection/: __init__.py  algorithms.py
Project/MDT-Dashboard/src/mdt_dashboard/feature_store/: advanced_feature_store.py
Project/MDT-Dashboard/src/mdt_dashboard/ml_pipeline/: __init__.py  distributed_training.py  (+7 more)
Project/MDT-Dashboard/tests/e2e/: test_system_e2e.py
Project/MDT-Dashboard/tests/integration/: test_api_integration.py
Project/MDT-Dashboard/tests/performance/: api_load_test.js  dashboard_load_test.js
Project/MDT-Dashboard/tests/unit/: test_data_processing.py  test_drift_detection.py  test_model_validation.py
(+48 files in other folders)
