[project]
name = "mdt-dashboard"
version = "0.1.0"
description = "Enterprise-grade Model Drift Detection & Telemetry Platform"
authors = [
    {name = "Ajay kumar Pondugala",email = "aponduga@cisco.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "plotly>=5.17.0",
    "psutil>=5.9.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "prometheus-client>=0.18.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "boto3>=1.29.0",
    "google-cloud-storage>=2.10.0",
    "azure-storage-blob>=12.19.0",
    "mlflow>=2.7.0",
    "evidently>=0.4.0",
    "great-expectations>=0.17.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "loguru>=0.7.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    "rich>=13.6.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "schedule>=1.2.0",
    "kafka-python>=2.0.2",
    "influxdb-client>=1.38.0",
    "psycopg2-binary>=2.9.7",
    "aioredis>=2.0.1"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0",
    "jupyter-lab>=4.0.0"
]

[project.scripts]
mdt-server = "mdt_dashboard.cli:run_server"
mdt-worker = "mdt_dashboard.cli:run_worker"
mdt-dashboard = "mdt_dashboard.cli:run_dashboard"
mdt-migrate = "mdt_dashboard.cli:run_migration"

[tool.poetry]
packages = [{include = "mdt_dashboard", from = "src"}]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
